<resources>
    <string name="app_name">Smartbox</string>
    <string name="ok">OK</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="login">Login Now</string>
    <string name="parentslogin">Login As Parent</string>
    <string name="teacherlogin">Login As Teacher</string>
    <string name="loading">Loading..</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="profil">Profile</string>
    <string name="openDrawer">Navigation Closed</string>
    <string name="closeDrawer">Navigation Open</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want yo Logout?</string>
    <string name="cancel">Cancel</string>
    <string name="rate">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy">Privacy Policy</string>
    <string name="complain">Add Complain</string>
    <string name="calen">Academic Calender</string>
    <string name="action_add_favourite">Open</string>
    <string name="ic_check_circle">&#xe03d;</string>
    <string name="ic_keyboard_arrow_right">&#xe0c7;</string>
    <string name="ic_email">&#xe087;</string>
    <string name="ic_close">&#xe048;</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_check_circle_blank">&#xe03e;</string>
    <string name="ic_folder">&#xe09d;</string>

    <string name="ic_arrow_back">&#xe010;</string>
    <string name="ic_arrow_drop_down">&#xe011;</string>
    <string name="ic_arrow_drop_down_circle">&#xe012;</string>
    <string name="ic_keyboard_arrow_down">&#xe0c5;</string>
    <string name="ic_keyboard_arrow_left">&#xe0c6;</string>
    <string name="ic_keyboard_arrow_up">&#xe0c8;</string>
    <string name="ic_keyboard_backspace">&#xe0c9;</string>
    <string name="ic_keyboard_capslock">&#xe0ca;</string>
    <string name="ic_keyboard_control">&#xe0cb;</string>
    <string name="ic_keyboard_hide">&#xe0cc;</string>
    <string name="ic_keyboard_return">&#xe0cd;</string>
    <string name="ic_keyboard_tab">&#xe0ce;</string>
    <string name="ic_keyboard_voice">&#xe0cf;</string>
    <string name="timetable">Timetable</string>
    <string name="notice">Notice</string>
    <string name="home">Home</string>
    <string name="marks">Marks</string>
    <string name="attendance">Attendance</string>
    <string name="customize">Custom</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="undo">Undo</string>
    <string name="events">Events</string>
    <string name="assignment">Assignment</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>